Add new buttons in toolbar

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 	
     <button id="panelExpandBtn" class="panel-expand-btn">⮜</button>
 
-    <button id="panelClose" title="Close panel">✕</button>
+    <!--<button id="panelClose" title="Close panel">✕</button>-->
 
 	<div id="toolbar">
 	  
@@ -557,6 +557,14 @@
 	  <!-- Right side -->
 	  <div class="right-tools">
 	  
+	    <button id="undoBtn" title="Undo">↩️</button>
+		
+		<button id="redoBtn" title="Redo">↪️</button>
+		
+		<button id="loadGraphBtn" title="Load JSON">📂</button>
+		
+		<button id="saveAllBtn" title="Save JSON">💾</button>
+	
         <button id="exportPngBtn" title="Export PNG">📤</button>
 
 		<button id="toggleGridBtn" class="icon-btn" title="Toggle Grid">
